updating site with marketing images

--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,17 @@
 /** global styles go here **/
-  /*font-family: 'Press Start 2P', cursive;*/
+
+a {
+  font-weight: bold;
+}
+
+.main-banner {
+  width: 100%;
+}
 
 .brand-heading {
   font-family: 'Zilla Slab Highlight', cursive;
 }
 
-a {
-  font-weight: bold;
-}
 .summary {
   font-family: 'Amatic SC', cursive;
   font-size: xx-large;
